// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp should add prefix and suffix 1`] = `
<time
  class="StyledTimestamp-um718p-0 jZIako"
  datetime="2018-10-19"
>
  Prefix here 19 October 2018 suffix here
</time>
`;

exports[`Timestamp should render correctly 1`] = `
<time
  class="StyledTimestamp-um718p-0 jZIako"
  datetime="2018-10-19"
>
  19 October 2018
</time>
`;

exports[`Timestamp should render without a leading zero on the day 1`] = `
<time
  class="StyledTimestamp-um718p-0 duGrBI"
  datetime="2018-07-07"
>
  ۷ ژوئیه ۲۰۱۸
</time>
`;
